--- a/settings.json
+++ b/settings.json
@@ -1,12 +1,12 @@
 {
     "wallets": {
-        "wallet1": "0xYourWalletAddress1",
-        "wallet2": "0xYourWalletAddress2",
-        "wallet3": "0xYourWalletAddress3"
+        "wallet1": "Wallet1PrivateKeys",
+        "wallet2": "Wallet2PrivateKeys",
+        "wallet3": "Wallet3PrivateKeys"
     },
     "tokenToBuy": "0xYourTokenAddress",
     "slippage": 0.01,   
-    "autoSlippage": true,                             
+    "autoSlippage": false,                             
     "amountOfETHToBuy": {
         "wallet1": 0.1,                              
         "wallet2": 0.2,                                 
@@ -18,7 +18,7 @@
     "numberOfRounds": 3,
     "PrivateTransaction": true,
     "rpc": {
-        "Url_Https": "http://your-rpc-url",
-        "Url_Wss": "wss://your-rpc-url"
+        "Url_Https": "https://mempool.merkle.io/rpc/eth/pk_mbs_4bde7f72b572527acd45d58ff707ae38",
+        "Url_Wss": "wss://mempool.merkle.io/rpc/eth/pk_mbs_4bde7f72b572527acd45d58ff707ae38"
     }
 }
